Revision history for Perl extension JavaScript::Minifier::XS.

????
    - properly clear end of internally allocated buffers
    - added some debugging output, which could be enabled at compile-time

0.02        Tue May  6 00:16 PDT 2008
    - rebuild packages; EU::MM borked my META.yml

0.01        Mon May  5 15:11 PDT 2008
    - fix minification of "division of an array subscript".  Thanks to Ingy and
      Dan at Socialtext for the JS!
    - first NON-devel release

0.01_05     Sat Oct 20 22:48 PDT 2007
    - don't use "strcasestr()"; not available on Solaris

0.01_04     Wed Oct 17 15:56 PDT 2007
    - fix t/02-minify.t, so it doesn't try to "use_ok()" before issuing a test
      plan

0.01_03     Tue Oct 16 19:47 PDT 2007
    - don't use "strndup()"; not available on all systems
    - we require Perl 5.006; update Build.PL and XS.pm to denote this

0.01_02     Tue Oct 16 12:22 PDT 2007
    - relocate the XS file so that its picked up properly by EU::MM when
      running "perl Makefile.PL" to do a build.

0.01_01     Mon Oct 15 22:11 PDT 2007
    - initial public version